--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,14 +6,18 @@
     
 
     <div class="box">
-        <%for(i=0;i<newListItem.length;i++){ %>
-        <div class="item">
-            <input type="checkbox">
-            <p>
-                <%= newListItem[i] %>
-            </p>
-        </div>
-        <%} %>
+
+        <%newListItem.forEach(function(item){%>
+            <form action="/delete" method="post">
+                <div class="item">
+                    <input type="checkbox" name="checkBox" value="<%= item._id %>" onChange="this.form.submit()">
+                    <p>
+                        <%= item.name %>
+                    </p>
+                </div>
+            </form>
+            
+        <%})%>
 
         <form class="item" action="/" method="post">
             <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
